git repo changes

--- a/pom.xml
+++ b/pom.xml
@@ -80,4 +80,13 @@
 			<version>2.0.4</version>
 		</dependency>
 	</dependencies>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/jonnalasesi/REPOSITORY</url>
+		</repository>
+	</distributionManagement>
+
 </project>
